

include_directories("${CMAKE_SOURCE_DIR}/include/Geometry")

# file(GLOB_RECURSE GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/*.C")

list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/BaseCell.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/BdCircle.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/BdLine.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/BdPolygon.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/BdSpline.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/BdNonUniformSpline.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/BdNoPRM.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/BoundComp.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/BoundComp2D.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/BoundEdge.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/BoundPart.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/Collection.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/Domain.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/GridCell.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/InterfaceJoint.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/IsoBoundEdge.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/IsoInterfaceJoint.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/IsoJointEqN.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/It_Between.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/It_EQ.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/It_EQLevel.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/It_Finest.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/It_LE.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/It_LELevel.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/It_Mortar.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/It_OCAF.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/It_Search.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/Iterator.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/Joint.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/JointCollection.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/JointEqN.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/Line.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/MacroCell.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/Mapper.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/MeshGen.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/MortarBaseJoint.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/MortarJoint.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/PeriodicJoint.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/Quadrangle.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/ReadGeo.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/Rectangle.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/RefDesc.C")
# list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/ShapeDesc.C")
# list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/SubDomainEdge3D.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/SubDomainJoint.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/SubDomainHaloJoint.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/Tests.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/Triangle.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/Vertex.C")

if("${AParMooN_GEO}" STREQUAL "2D")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/Parallelogram.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/InnerInterfaceJoint.C")
elseif("${AParMooN_GEO}" STREQUAL "3D")

list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/BdCylinder.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/BdPlane.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/BdSphere.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/Edge.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/InnerEdge.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/BDEdge3D.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/IsoBoundFace.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/BdWall.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/Brick.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/BoundComp3D.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/BoundFace.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/Hexahedron.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/InterfaceJoint3D.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/IsoEdge3D.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/IsoInterfaceJoint3D.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/TetGenMeshLoader.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/Tetrahedron.C")
list(APPEND GEO_SOURCES "${PROJECT_SOURCE_DIR}/src/Geometry/Parallelogram.C")
endif("${AParMooN_GEO}" STREQUAL "2D")


add_library(geo STATIC ${GEO_SOURCES})



	
